Fixing some overflow issues on IE

--- a/wp-content/themes/standard-industries/styles/modules/_homepage-hero.scss
+++ b/wp-content/themes/standard-industries/styles/modules/_homepage-hero.scss
@@ -7,6 +7,7 @@
   color: $white;
   height: calc(100vh - 64px);
   max-height: 680px;
+  overflow: hidden;
   width: 100%;
 
   @include medium-and-up {
